# VcRustSpriteEd

./: .gitignore  Cargo.toml  Compile_resources.txt  README.md  myapp.gresource  myapp.gresource.xml  palette.cfg
res/: gtk_sprite_ed.glade
src/: edit_area.rs  ellipse_mode.rs  fill_mode.rs  main.rs  myapp.gresource  palette.rs  pencil_mode.rs  rectangle_mode.rs  rgb_utils.rs  rhandle.rs  rpoint.rs  rrect.rs  select_mode.rs  select_rect.rs  sprites_bar.rs
