[package]
name = "gtk_sprite_ed"
version = "0.1.0"
authors = ["nguray <raymond.nguyenthanh@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
futures = "0.3"
atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
once_cell = "^0"
pango = "^0"
pangocairo = "^0"
cairo-rs = { version = "^0", features = ["png"] }
gdk-sys = "^0"
gtk-sys = "^0"

[dependencies.async-tls]
version = "0.6"
optional = true
